--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   width: 100%;
 }
 
-.customDropDownMenu ._selectField {
+.customDropDownMenu .selectField {
   cursor: pointer;
   width: 100%;
   display: flex;
@@ -15,11 +15,11 @@
   padding-block: 7px;
 }
 
-.customDropDownMenu ._selectField svg path {
+.customDropDownMenu .selectField svg path {
   fill: #979797;
 }
 
-.customDropDownMenu ._dropdown {
+.customDropDownMenu .dropdown {
   position: absolute;
   z-index: 10;
   left: 0;
@@ -33,7 +33,7 @@
   box-shadow: 0px 0px 4px 0px #00000040;
 }
 
-.customDropDownMenu ._dropdown ._dropdownBox {
+.customDropDownMenu .dropdown .dropdownBox {
   max-height: 20vh;
   height: 100%;
   overflow-y: auto;
@@ -41,12 +41,12 @@
   flex-direction: column;
 }
 
-.customDropDownMenu ._dropdown ._dropdownBox::-webkit-scrollbar {
+.customDropDownMenu .dropdown .dropdownBox::-webkit-scrollbar {
   width: 5px;
   height: 5px;
 }
 
-.customDropDownMenu ._dropdown ._dropdownBox::-webkit-scrollbar-thumb {
+.customDropDownMenu .dropdown .dropdownBox::-webkit-scrollbar-thumb {
   background: gray;
   border-radius: 10px;
 }
