--- a/src/index.css
+++ b/src/index.css
@@ -56,15 +56,19 @@
   flex-direction: column;
 }
 
-.selector .dropdown .dropdownBox .list .menu > div {
+.selector .dropdown .dropdownBox .list .menu {
   cursor: pointer;
 }
 
-.selector .dropdown .dropdownBox .list .menu > div:hover {
+.selector .dropdown .dropdownBox .list .menu:hover {
   border-radius: 4px;
   background: #a419161c;
   margin-inline-end: 10px;
   padding: 5px 10px;
+}
+.selector .dropdown .dropdownBox .list hr {
+  margin-block: 5px;
+  margin-inline-end: 10px;
 }
 
 .top {
