--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@
   cursor: pointer;
   margin-inline-end: 10px;
   padding: 4px 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .selector .dropdown .menu .list .item.active {
